@@ -121,6 +121,8 @@ where XXXXXX is the bug number as listed below.
 302630  Memcheck on multithreaded program fails with Assertion 
         'sizeof(UWord) == sizeof(UInt)' failed in m_syscall.c
         == 326797
+312989  ioctl handling needs to do POST handling on generic ioctls and
+        needs to handle BPF ioctls
 319274  Fix unhandled syscall: unix:410 (sigsuspend_nocancel) on OS X
 324181  mmap does not handle MAP_32BIT (handle it now, rather than fail it)
 327745  Fix valgrind 3.9.0 build fails on Mac OS X 10.6.8
